# Iron-Mark

./: .gitignore  .imgbotconfig  AGENTS.md  FAQ.md  HOW-TO-CITE.md  LICENSE.md  LINK_QA.md  PROFILE.md  PROOF.md  README.md  RECRUITER.md  STACK.md  humans.txt  llms-ctx-full.txt  llms-full.txt  llms-index.json  llms.txt  robots.txt  sitemap.xml
.github/: MAINTAINER_CHECKLIST.md  POST_MERGE.md  REPO_SETUP.md  pull_request_template.md
.github/workflows/: bump-index-date.yml  deploy-pages.yml  enforce-pr-flow.yml  link-qa-monthly.yml  mcp-server.yml  update-github-stats.yml  validate-index.yml
docs/: STRUCTURE.md  index.html
docs/internal/: LINK_QA.md
docs/lab/: index.html
mcp-server/: README.md  mcp-config.example.json
mcp-server/iron_mark_profile/: server.py  store.py
portfolio-sync/: faq-crosslinks.md  marksiazon-dev-append.md
public/: AGENTS.md  CITATION.cff  FAQ.md  HOW-TO-CITE.md  LAB.md  LICENSE.md  PROFILE.md  PROOF.md  README.md  RECRUITER.md  STACK.md  llms-ctx-full.txt  llms-full.txt  readme-intelligence.json
public/schema/: ENTITY.md  WIKIDATA.md  faq.jsonld  llms-index.schema.json  person.jsonld
schema/: ENTITY.md  WIKIDATA.md  person.jsonld
scripts/: bump_index_dates.py  check_portfolio_mirror.py  generate_llms_ctx.py  link_qa.py  test_mcp_server.py  validate_index.py
src/: repo_paths.py
src/data/: portfolio-feed.snapshot.json
src/mcp-server/: Dockerfile  README.md  docker-compose.yml  mcp-config-http.example.json  mcp-config.example.json  pyproject.toml
src/mcp-server/iron_mark_profile/: __init__.py  server.py  store.py
(+28 files in other folders)
